Solved Layout bugs

--- a/src/LayoutWeb.css
+++ b/src/LayoutWeb.css
@@ -5,16 +5,8 @@
     left: 1rem;
     /* font-size: 1rem; */
 }
-.voices{
-    -webkit-transition: width 2s ease;
-    transition: width 2s ease;
-    transition-delay: 0s;
-}
 .chats{
     z-index: -1;
-    -webkit-transition: width 2s ease;
-    transition: width 2s ease;
-    transition-delay: 0s;
 }
 .voices.true{
     width: 40%;
